--- a/compose/backend/Dockerfile
+++ b/compose/backend/Dockerfile
@@ -1,7 +1,7 @@
 FROM golang:1.18-alpine AS builder
 RUN apk update
 RUN apk add git
-
+RUN apk --no-cache add ca-certificates
 WORKDIR /app
 
 COPY . .
@@ -11,8 +11,7 @@ RUN go mod download
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o ./bin/main .
 
 FROM scratch
-
+COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 COPY --from=builder /app/bin/main .
 
-# Command to run when starting the container.
 CMD ["./main"]
